[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/UI/ConvincingPirate.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/UI/sound_on.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/sound_off.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/progress_bg.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/progress_full.png" type="Texture" id=6]
[ext_resource path="res://assets/Shaders/vignette.gdshader" type="Shader" id=7]
[ext_resource path="res://icon.png" type="Texture" id=8]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 7 )
shader_param/vignette = 0.0

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 2 )

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vignette" type="ColorRect" parent="."]
material = SubResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hint" type="Label" parent="CenterContainer"]
margin_left = 348.0
margin_top = 283.0
margin_right = 675.0
margin_bottom = 316.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Press E to hoist the red flag"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 10.0
rect_min_size = Vector2( 0, 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 14.0
margin_right = 1024.0
margin_bottom = 126.0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 10.0
margin_bottom = 112.0
rect_min_size = Vector2( 10, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 14.0
margin_right = 214.0
margin_bottom = 112.0

[node name="CannonChargingBar" type="TextureProgress" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 30 )
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
nine_patch_stretch = true
stretch_margin_left = 8
stretch_margin_top = 8
stretch_margin_right = 8
stretch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 200.0
margin_bottom = 44.0
rect_min_size = Vector2( 0, 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 200.0
margin_bottom = 112.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 8 )

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 68.0
margin_top = 19.0
margin_right = 82.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 3 )
text = "x"

[node name="HealthLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 86.0
margin_top = 19.0
margin_right = 96.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 4 )
text = "?"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 218.0
margin_right = 974.0
margin_bottom = 112.0
size_flags_horizontal = 3

[node name="sound_button" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 978.0
margin_right = 1010.0
margin_bottom = 112.0
focus_mode = 0
mouse_default_cursor_shape = 2
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 1014.0
margin_right = 1024.0
margin_bottom = 112.0
rect_min_size = Vector2( 10, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="toggled" from="VBoxContainer/HBoxContainer/sound_button" to="." method="_on_sound_button_toggled"]
